# dioxus-heroicons

./: .gitignore  Cargo.toml  Changes.md  README.md  do-release.pl  package-lock.json  package.json  precious.toml
.github/workflows/: ci.yml  lint.yml
src/: lib.rs  mini.rs  outline.rs  solid.rs
