[package]
name = "dioxus-heroicons"
version = "2.0.13"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Dioxus components for heroicons (https://heroicons.com/)"
repository = "https://github.com/houseabsolute/dioxus-heroicons"
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
dioxus = { version = "0.2.0", features = ["html"] }

[workspace]
members = ["gen"]

[workspace.metadata.release]
allow-branch = ["master"]
